--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -2,7 +2,11 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+
+    //Mirem si tenim sessio activa
+    var loggedIn = Tools.TokenHelper.IsTokenSession(HttpContext.Session.GetString("AuthToken"));
 }
+
 
 <div class="text-center">
     <h1 class="display-4">Benvinguts en aquest client de l'API de Pelis!</h1>
@@ -29,6 +33,20 @@
                         <td>@film.Name</td>
                         <td>@film.Description</td>
                         <td>@film.DirectorName</td>
+                        <td>@if (loggedIn)
+                            {
+                            <form method="post" asp-page-handler="Delete" asp-route-id="@film.Id" class="d-inline">
+                                <button type="submit" class="btn btn-danger btn-sm" title="Eliminar">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </form>
+                        }
+                        else{
+                             <button class="btn btn-secondary btn-sm" disabled title="Només per usuaris autenticats">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        }
+                        </td>
                     </tr>
                 }
             </tbody>
